--- a/Formulir.html
+++ b/Formulir.html
@@ -131,7 +131,7 @@
                     <div class="row">
                         <div class="col-md-4 mb-3">
                             <label for="namaKeluarga" class="form-label">Nama Keluarga</label>
-                            <input type="text" class="form-control" id="namaKeluarga" placeholder="Contoh: M">
+                            <input type="text" class="form-control" id="namaKeluarga" placeholder="Contoh: Gung Sri">
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="hpKeluarga" class="form-label">Nomor Telepon Keluarga</label>
