--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
                 <img src="logo/Iconnet_logo.png" alt="Iconnet Logo" height="30" class="d-inline-block align-text-top me-2">
-                ICONNET
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,7 +40,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#layanan">Layanan</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Formulir.html">Daftar</a></li>
                     <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
                 </ul>
             </div>
@@ -56,13 +54,13 @@
                         Internet 100% Fiber Optik di Jaringan PLN
                     </h1>
                     <p class="lead mb-4 fw-light">
-                        Koneksi super cepat, stabil, dan **Tanpa FUP** (Fair Usage Policy).
+                        Koneksi super cepat, stabil, dan Tanpa FUP (Fair Usage Policy).
                     </p>
                     <a href="Formulir.html" class="btn-cta mb-3 me-3">
                         <i class="fas fa-bolt me-2"></i> DAFTAR SEKARANG
                     </a>
                     <a href="#layanan" class="btn btn-outline-light btn-lg rounded-pill" style="padding: 18px 30px;">
-                        Lihat Paket <i class="fas fa-arrow-down ms-2"></i>
+                        Mengapa?? <i class="fas fa-arrow-down ms-2"></i>
                     </a>
                 </div>
                 <div class="col-lg-5 text-center mt-5 mt-lg-0">
@@ -81,7 +79,7 @@
                     <div class="card feature-card p-4 h-100 border-0 shadow-sm">
                         <i class="fas fa-signal fa-3x text-success mb-3"></i>
                         <h5 class="card-title fw-bold">Koneksi Stabil</h5>
-                        <p class="card-text text-muted">Didukung oleh jaringan PLN, menjamin *uptime* dan stabilitas terbaik untuk WFH dan *gaming*.</p>
+                        <p class="card-text text-muted">Didukung oleh jaringan PLN, menjamin uptime dan stabilitas terbaik untuk WFH dan gaming.</p>
                     </div>
                 </div>
                 
@@ -89,7 +87,7 @@
                     <div class="card feature-card p-4 h-100 border-0 shadow-sm">
                         <i class="fas fa-infinity fa-3x text-danger mb-3"></i>
                         <h5 class="card-title fw-bold">True Unlimited</h5>
-                        <p class="card-text text-muted">Bebas dari batasan kuota dan FUP yang menyebalkan. *Streaming* sepuasnya.</p>
+                        <p class="card-text text-muted">Bebas dari batasan kuota dan FUP yang menyebalkan. Streaming sepuasnya.</p>
                     </div>
                 </div>
                 
@@ -111,13 +109,13 @@
                 <div class="col-md-6">
                     <h5 class="text-warning mb-3">Hubungi Kami (Admin Pendaftaran)</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-phone-alt me-2"></i> **Nomor HP/WA:** 08XXXXXXXXXX</li>
-                        <li><i class="fas fa-envelope me-2"></i> **Email:** admin@iconnet.com</li>
+                        <li><i class="fas fa-phone-alt me-2"></i> Nomor HP/WA: 08XXXXXXXXXX</li>
+                        <li><i class="fas fa-envelope me-2"></i> Email: admin@iconnet.com</li>
                     </ul>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">&copy; 2024 ICONNET. Powered by PLN Icon Plus.</p>
-                    <small>Dibuat oleh Tim Penjualan [Nama Tim Anda]</small>
+                    <p class="mb-0">&copy; 2025 ICONNET. Powered by PLN Icon Plus.</p>
+                    <small>Dibuat oleh Tim Magang Pride</small>
                 </div>
             </div>
         </div>
