--- a/sukses-pendaftaran.html
+++ b/sukses-pendaftaran.html
@@ -55,8 +55,8 @@
                     <h5 class="alert-heading fw-bold">Langkah Selanjutnya (1x24 Jam):</h5>
                     <ol class="list-unstyled mb-0 mt-3">
                         <li class="mb-2"><i class="fas fa-clock me-2 text-primary"></i> Data Anda sedang diverifikasi oleh tim internal.</li>
-                        <li class="mb-2"><i class="fas fa-mobile-alt me-2 text-primary"></i> Tim kami akan menghubungi Anda via **Nomor HP/WhatsApp** yang terdaftar.</li>
-                        <li><i class="fas fa-file-invoice me-2 text-primary"></i> Siapkan **foto KTP** dan **ID Pelanggan PLN** untuk proses validasi.</li>
+                        <li class="mb-2"><i class="fas fa-mobile-alt me-2 text-primary"></i> Tim kami akan menghubungi Anda via Nomor HP/WhatsApp yang terdaftar.</li>
+                        <li><i class="fas fa-file-invoice me-2 text-primary"></i> Siapkan Foto KTP untuk proses validasi.</li>
                     </ol>
                 </div>
 
