--- a/admin.html
+++ b/admin.html
@@ -46,9 +46,9 @@
                                 <th>#</th>
                                 <th>Tanggal Masuk</th>
                                 <th>Nama KTP</th>
-                                <th>No. HP</th>
+                                <th>No. KTP</th>         <th>No. HP</th>
                                 <th>Email</th>
-                                <th>Paket</th>
+                                <th>No. PLN</th>         <th>Paket</th>
                                 <th>Kecepatan</th>
                                 <th>Alamat Pemasangan</th>
                                 <th>Keluarga (HP)</th>
